--- a/IrofCryptographic/IrofCryptographic/View/MainWindow.xaml
+++ b/IrofCryptographic/IrofCryptographic/View/MainWindow.xaml
@@ -1,8 +1,29 @@
 ﻿<Window x:Class="IrofCryptographic.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:vm="clr-namespace:IrofCryptographic.ViewModel"
+        Title="MainWindow" Height="330" Width="723.572" Loaded="Window_Loaded">
     <Grid>
-        
+
+        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Background="#FFFFE2E2" >
+                <Label Content="秘密キー" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="20"/>
+                <Button Content="秘密キー作成" FontSize="20" Padding="10" Margin="20,5" Command="{Binding publicKeyCreateCommand}"/>
+                <WebBrowser Height="100"/>
+
+
+
+
+            </StackPanel>
+
+        </Grid>
+
+
+
+
     </Grid>
 </Window>
