--- a/IrofCryptographic/IrofCryptographic/View/MainWindow.xaml
+++ b/IrofCryptographic/IrofCryptographic/View/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:IrofCryptographic.ViewModel"
-        Title="MainWindow" Height="330" Width="723.572" Loaded="Window_Loaded">
+        Title="MainWindow" Height="1024" Width="1211.572" Loaded="Window_Loaded">
     <Grid>
 
         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -11,13 +11,30 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Background="#FFFFE2E2" >
-                <Label Content="秘密キー" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="20"/>
-                <Button Content="秘密キー作成" FontSize="20" Padding="10" Margin="20,5" Command="{Binding publicKeyCreateCommand}"/>
-                <WebBrowser Height="100"/>
+                <Label Content="秘密Keyつくるよ！" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="20"/>
+                <Button Content="秘密Key作成" FontSize="20" Padding="10" Margin="20,5" Command="{Binding publicKeyCreateCommand}"/>
+                <WebBrowser x:Name="webBrowserA" Height="224" Margin="0,0,0,5"/>
+                <WebBrowser x:Name="webBrowserB" Height="224" />
+                <Label Content="出来た秘密Key" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="20"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding Path=LocalKey}" Margin="10,1,10,10" MinHeight="58" FontSize="20"/>
 
 
+                <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FFFF6262"  >
+                    <Label Content="復号するよ！" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="20"/>
+                    <Label Content="暗号化された文章" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="20"/>
+                    <TextBox TextWrapping="Wrap" Text="{Binding Path=EncryptTxt2}" Margin="10,1,10,2" MinHeight="58" FontSize="20"/>
+                    <Button Content="複合開始" FontSize="20" Padding="10" Margin="20,2,20,5" Command="{Binding DecryptCommand}"/>
+                    <Label Content="復号された文章" HorizontalAlignment="Left" Margin="10,2,0,0" VerticalAlignment="Top" FontSize="20"/>
+                    <TextBox TextWrapping="Wrap" Text="{Binding Path=NormalTxt2}" Margin="10,1,10,20" MinHeight="58" FontSize="20"/>
 
-
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Grid.Column="1" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Background="#FFE2FFFE" >
+                <Label Content="暗号化したい文章" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="20"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding Path=NormalTxt}" Margin="10,1,10,2" MinHeight="78" FontSize="20"/>
+                <Button Content="暗号化開始" FontSize="20" Padding="10" Margin="20,2" Command="{Binding EncryptCommand}"/>
+                <Label Content="暗号化された文章" HorizontalAlignment="Left" Margin="10,2,0,0" VerticalAlignment="Top" FontSize="20"/>
+                <TextBox TextWrapping="Wrap" Text="{Binding Path=EncryptTxt}" Margin="10,1,10,2" MinHeight="78" FontSize="20"/>
             </StackPanel>
 
         </Grid>
